name:                 resume
version:              0.0.1
synopsis:             resume website generator
license:              GPL-3
license-file:         LICENSE
author:               Jon Childress
category:             Web
build-type:           Simple
extra-source-files:   README.md
cabal-version:        >= 1.10

executable server
  hs-source-dirs:     src
  main-is:            Main.hs
  ghc-options:        -W -Wall
  default-language:   Haskell2010
  build-depends:      base == 4.*,
                      blaze-html == 0.8.*,
                      blaze-markup == 0.7.*,
                      mtl == 2.2.*,
                      text == 1.2.*,
                      transformers == 0.4.*
